--- a/package.json
+++ b/package.json
@@ -5,22 +5,17 @@
   "license": "ISC",
   "author": "Yarikov A.K.",
   "type": "commonjs",
-  "main": "index.js",
   "scripts": {
-    "start": "rimraf dist/main.js && tsc src/main.ts --outDir dist && node dist/main.js",
-    "dev": "tsc -w src/main.ts --outDir dist && node dist/main.js"
+    "start": "rimraf dist && tsc --build && node dist/esm/main.js",
+    "dev": "tsc --build --watch && node dist/esm/main.js"
   },
-  "dependencies": {
-    "fs": "^0.0.1-security",
-    "node": "^24.12.0"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=18"
   },
   "devDependencies": {
     "@types/node": "^25.0.2",
     "rimraf": "^6.1.2",
-    "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   },
   "repository": {
