--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "CommonJS",
     "declaration": true,
     "outDir": "dist/esm",
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "Bundler",
     "types": [
       "node"
     ],
